[gd_scene load_steps=4 format=3 uid="uid://cvcb8cey23yts"]

[ext_resource type="Script" path="res://dialogue_manager_pirata.gd" id="1_gg1lu"]
[ext_resource type="Texture2D" uid="uid://p7qupsvavf88" path="res://Box.png" id="2_wd7wn"]
[ext_resource type="FontFile" uid="uid://b2duuy16x68ey" path="res://assests/fontes/Minecraft.ttf" id="3_lrssm"]

[node name="dialogue_manager_pirata" type="Node2D"]
script = ExtResource("1_gg1lu")

[node name="Box" type="TextureRect" parent="."]
offset_left = -3.0
offset_top = 322.0
offset_right = 2009.0
offset_bottom = 822.0
scale = Vector2(0.321, 0.321)
texture = ExtResource("2_wd7wn")

[node name="Name" type="Label" parent="Box"]
layout_mode = 0
offset_left = 80.9967
offset_top = 59.1898
offset_right = 974.997
offset_bottom = 110.19
theme_override_colors/font_color = Color(0.619608, 0.619608, 0.619608, 1)
theme_override_fonts/font = ExtResource("3_lrssm")
theme_override_font_sizes/font_size = 48
text = "Nome teste"

[node name="Label" type="RichTextLabel" parent="Box"]
layout_mode = 0
offset_left = 87.0
offset_top = 131.0
offset_right = 1894.0
offset_bottom = 427.0
theme_override_fonts/normal_font = ExtResource("3_lrssm")
theme_override_font_sizes/normal_font_size = 54
bbcode_enabled = true
autowrap_mode = 1

[node name="Timer" type="Timer" parent="."]
wait_time = 0.09
autostart = true

[node name="HBoxContainer" type="HBoxContainer" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_top = 251.0
offset_right = 566.0
offset_bottom = 464.0
grow_horizontal = 2
grow_vertical = 2

[node name="TimerQuieto" type="Timer" parent="."]
wait_time = 30.0

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="timeout" from="TimerQuieto" to="." method="_on_timer_quieto_timeout"]
